--- a/package.json
+++ b/package.json
@@ -10,32 +10,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "expo": "~50.0.0",
-    "expo-av": "~13.10.0",
-    "expo-clipboard": "~5.0.1",
-    "expo-constants": "~15.4.6",
-    "expo-document-picker": "~11.10.0",
-    "expo-file-system": "~16.0.0",
-    "expo-font": "~11.10.3",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.0",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "lucide-react-native": "^0.294.0",
+    "expo": "^54.0.33",
+    "expo-av": "~16.0.8",
+    "expo-clipboard": "~8.0.8",
+    "expo-constants": "~18.0.13",
+    "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.11",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.23",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.16",
+    "lucide-react-native": "^0.563.0",
     "nativewind": "^4.0.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react": "^19.1.0",
+    "react-native": "^0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "react-native-svg-transformer": "^1.3.0",
     "tailwindcss": "^3.3.0",
