--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "expo-updates": "~29.0.16",
     "lucide-react-native": "^0.563.0",
     "nativewind": "^4.0.1",
-    "react": "^19.1.0",
+    "react": "19.1.0",
     "react-native": "^0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
