--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/playfair-display": "^0.4.2",
+    "@expo-google-fonts/plus-jakarta-sans": "^0.4.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
