--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "expo": "^54.0.33",
-    "expo-av": "~16.0.8",
+    "expo-audio": "~1.1.1",
     "expo-blur": "~15.0.8",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
