--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.16",
+    "lottie-react-native": "~7.3.1",
     "lucide-react-native": "^0.563.0",
     "nativewind": "^4.0.1",
     "react": "19.1.0",
